fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ button:active {
 .state-button-off,
 .state-button-on {
   width: 150px;
+  height: 40px;
 }
 .toggle-button, .state-button-off {
   background-color: #8585ff;
@@ -100,11 +101,12 @@ button:active {
   position: absolute;
   top: 0;
   right: 0;
-  margin-top: 3px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   margin-right: 5px;
   font-family: 'Courier';
   width: 300px;
-  height: 30px;
+  height: 29px;
   word-wrap: normal;
   font-size: 13px;
   user-select: none;
